resize Yaxis, align callbox, correct radius values

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ color: #f9faf8;
 }
 .button{
     background-color: #3882f6;
-    border-radius: 10%;
+    border-radius: 6px;
     color: white;
     font-size: 22;
     font-weight: 900;
@@ -53,7 +53,7 @@ justify-content: space-between;
 }
 .alignY{
     padding-top: 15px;
-    padding-bottom: 55px;
+    padding-bottom: 95px;
 }
 .herobox{
     width: 410px;
@@ -91,7 +91,7 @@ width: 155px;
     border: 3px solid #3882f6;
     height: auto;
     width: 155px;
-    border-radius: 10%;
+    border-radius: 10px;
 }
 .imgline{
     display: flex;
@@ -121,4 +121,29 @@ width: 155px;
     font-weight: bolder;
     text-align: right;
     padding-right: 20px;
+}
+.callbox{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882f6;
+    border-radius: 8px;
+    color: #f9faf8;
+    padding-top: 60px;
+    padding-bottom:60px;
+    padding-right:90px;
+    padding-left: 90px;
+}
+.calltxtbox{
+    display: flex;
+    flex-direction: column;
+}
+.calltitle{
+    font-size: 30px;
+}
+.borderbox{
+    border: 3px solid #ffffff;
+}
+.calltxt{
+    font-size: 22px;
 }
